# OSDP-Reader-Test-Project

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  SCHEMATIC.md  partitions.csv  sdkconfig.defaults
components/app_console/: CMakeLists.txt  console.c
components/app_console/include/: app_console.h
components/board/: CMakeLists.txt  board_io.c
components/board/include/: board.h  board_io.h
components/desfire/: CMakeLists.txt  desfire.c  desfire_internal.h
components/desfire/include/: desfire.h
components/leaf/: CMakeLists.txt  leaf.c
components/leaf/include/: leaf.h
components/libosdp/: CMakeLists.txt
components/netconfig/: netconfig.c
components/netconfig/include/: netconfig.h
components/pn532/: CMakeLists.txt  pn532.c
components/pn532/include/: pn532.h
components/reader_core/: CMakeLists.txt  mode_controller.c
components/reader_core/include/: mode_controller.h  nfc_task.h  osdp_pd.h
components/webui/: CMakeLists.txt  webui.c
components/webui/assets/: index.html
components/webui/include/: webui.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  nfc_task.c  osdp_pd.c
